client-web/src/flay/panel/FlayTagManager.scss
flay-tag-manager {
  display: block;
  width: 100%;
  height: 100%;
  overflow: auto;

  > header {
    position: sticky;
    top: 0;
    z-index: 1;

    display: flex;
    flex-direction: column;
    gap: 0.25rem;

    margin: 0;
    padding: 1rem;
    background-color: var(--color-bg);
    box-shadow: var(--box-shadow-smallest);
    transition: box-shadow 0.3s ease;

    &:hover {
      box-shadow: var(--box-shadow-small);
    }

    > div {
      display: flex;
      justify-content: center;
      gap: 0.25rem;
      margin: auto;
      min-height: 2.5rem;
      max-width: 999px;
      width: 100%;

      input {
        flex: 1 1 auto;
        width: 1px;
        border: 1px dashed chocolate;
        border-radius: var(--border-radius);
        transition: all 0.2s ease;

        &:focus {
          border-color: var(--color-border-active);
          box-shadow: 0 0 0 2px var(--color-bg-focus);
        }

        &.tag-id {
          max-width: 3rem;
        }
        &.tag-group {
          max-width: 8rem;
        }
        &.tag-name {
          max-width: 12rem;
        }
        &.tag-desc {
          flex: 1 1 auto;
        }
      }

      button {
        border: 1px dashed chocolate;
        border-radius: var(--border-radius);
        padding-left: 0.5rem;
        padding-right: 0.5rem;
        transition: all 0.2s ease;

        &:hover {
          background-color: var(--color-bg-hover);
        }
      }
    }
  }

  > main {
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    gap: 0.5rem 2rem;

    margin: 0;
    padding: 1rem;
    overflow: auto;

    fieldset {
      position: relative;
      border: 1px dashed var(--color-border-window);
      margin-bottom: 0.5rem;
      transition:
        background-color 0.4s,
        box-shadow 0.4s;

      &:hover {
        background-color: var(--color-bg-transparent);
        box-shadow: var(--box-shadow);
        border-color: var(--color-orange);

        legend {
          background-color: var(--color-bg-transparent);
          box-shadow: var(--box-shadow);
          border-radius: 0.25rem;
        }
      }

      &.fixed {
        position: sticky;
        bottom: 0;
        background-color: var(--color-bg);

        .pin {
          transform: rotate(-45deg);
        }
      }

      legend {
        font-weight: 700;
        text-transform: capitalize;
        text-shadow: var(--text-shadow);
        padding: 0 0.5rem;
      }

      div {
        display: flex;
        flex-direction: row;
        flex-wrap: wrap;
        justify-content: center;
        align-items: flex-start;
        gap: 0.5rem 0.25rem;

        &:empty {
          min-height: 3rem;
        }

        &.dropzone {
          box-shadow: none;
          padding: 0;

          .flay-tag-info[draggable='true'] {
            width: auto !important;
          }
        }
      }

      .pin {
        position: absolute;
        top: 0;
        right: 0;
        cursor: pointer;
        margin: 0.5rem 0.75rem;
        z-index: 1;
      }
    }
  }

  .flay-tag-info {
    background-color: var(--color-bg);
    border: 1px solid rgba(245, 227, 239, 0.3);
    border-radius: var(--border-radius-huge);
    margin: 0;
    padding: 0.5rem;
    min-width: 6rem;
    transition: 0.4s;

    &:hover {
      box-shadow:
        inset 0 0 1rem 0.5rem rgba(245, 227, 239, 0.1),
        var(--box-shadow);
    }

    dt {
      display: flex;
      justify-content: space-between;
      align-items: baseline;
      gap: 0.5rem;

      label {
        font-size: inherit;
      }
      .icon {
        font-weight: 400;
        min-width: 1rem;
        text-align: left;
        svg {
          width: var(--size-small);
        }
      }
      .name {
        cursor: pointer;
        &:hover {
          text-shadow: var(--text-shadow-hover);
        }
      }
      .count {
        font-weight: 400;
        min-width: 1rem;
        text-align: right;
        &.zero {
          color: var(--color-red);
        }
      }
    }
    dd {
      margin: 0;
      text-align: center;
      .desc {
        font-size: var(--size-small);
        font-weight: 400;
      }
    }
  }
}

